# python-project-52

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
task_manager/: mixins.py  read_json.py  settings.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  test_label.json  test_status.json  test_task.json  test_user.json  users.json
task_manager/included_apps/labels/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/included_apps/labels/migrations/: 0001_initial.py
task_manager/included_apps/statuses/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/included_apps/statuses/migrations/: 0001_initial.py
task_manager/included_apps/tasks/: apps.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/included_apps/tasks/migrations/: 0001_initial.py  0002_alter_task_description.py  0003_alter_task_options_alter_task_description.py  0004_tasklabeldependence_task_labels.py  0005_alter_task_labels.py
task_manager/included_apps/users/: apps.py  forms.py  views.py
task_manager/templates/: base.html  index.html  login.html  navbar.html
task_manager/templates/labels/: create.html  delete.html  labels_list.html
task_manager/templates/statuses/: create.html  delete.html  statuses_list.html
task_manager/templates/tasks/: create.html  delete.html  show_one_task.html  tasks_list.html
task_manager/templates/users/: delete.html  update.html  users_list.html
task_manager/tests/: tests_labels.py  tests_main_pages.py  tests_statuses.py  tests_tasks.py  tests_users.py
(+3 files in other folders)
